# szmde

./: .git-diff-output.txt  .gitignore  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md  bugs.md  ci-cd.md  gdrive-picker-plan.md  gdrive-picker-s1-runbook.md  llm-workflow-tests.md  m1-plan.md  m2-plan.md  m3-cloud-setup.md  m3-plan.md  m4-feedback-triage.md  m4-plan.md  m5-plan.md  m6-plan.md  requirements.md  roadmap.md  testing-strategy.md  traceability.md
docs/archive/: README.md  m1-plan.md  m2-plan.md  m3-plan.md  m4-feedback-triage.md  m4-plan.md  m5-plan.md
samples/: welcome.md
scripts/: check-traceability.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  gdrive_client.example.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Editor.svelte  HamburgerMenu.svelte  TableSizePicker.svelte  platform.test.ts  platform.ts
src/lib/editor/: alerts.dom.test.ts  alerts.ts  blocks.test.ts  blocks.ts  count.test.ts  count.ts  editing.test.ts  emoji-data.ts  emoji.dom.test.ts  emoji.test.ts  emoji.ts  eol.test.ts  eol.ts  fold.dom.test.ts  fold.ts  frontmatter.test.ts  frontmatter.ts  hr.dom.test.ts  hr.ts  image.dom.test.ts  images.ts  indent.test.ts  indent.ts  keymap.ts  markers.dom.test.ts  markers.ts  nested.dom.test.ts  render-mode-cycle.test.ts  render-mode.test.ts  render-mode.ts  replace-groups.test.ts  replace-groups.ts  search-replace.dom.test.ts  search.dom.test.ts  search.ts  setup.test.ts  setup.ts  table-cell-editor.dom.test.ts  table-cell-editor.ts  table-commands.ts  (+20 more)
src/lib/settings/: appearance.test.ts  appearance.ts  backend.test.ts  backend.ts  merge.test.ts  merge.ts  migrate.test.ts  migrate.ts  schema.test.ts  schema.ts  service.test.ts  service.ts  store.svelte.ts  tauri-backend.test.ts  tauri-backend.ts  validate.test.ts  validate.ts
src/lib/storage/: autosave.test.ts  autosave.ts  cloud-http.test.ts  cloud-http.ts  conflict.test.ts  conflict.ts  drive-id.test.ts  drive-id.ts  gdrive-connect.test.ts  gdrive-connect.ts  gdrive.test.ts  gdrive.ts  local.test.ts  local.ts  oauth.test.ts  oauth.ts  offline.test.ts  offline.ts  onedrive.test.ts  onedrive.ts  provider.test.ts  provider.ts  registry.test.ts  registry.ts  saf.test.ts  saf.ts  secure-store.test.ts  secure-store.ts  tauri-secure-store.test.ts  tauri-secure-store.ts  tauri-transport.test.ts  tauri-transport.ts
src/routes/: +page.svelte  layout.test.ts
