[package]
name = "szmde"
version = "0.1.0"
description = "Stephen Zhao MarkDown Editor"
authors = ["Stephen Zhao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "szmde_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Native HTTP (reqwest) for cloud egress that bypasses the webview CORS wall
# (M3 L2, Google token + Drive endpoints), and the system-browser opener for the
# OAuth consent page. Scoped by capabilities to only the googleapis hosts.
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
# spawn_blocking for the loopback accept (runs inside Tauri's tokio runtime).
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS secure store for OAuth tokens (REQ-SEC-1): Windows Credential Manager +
# macOS Keychain (the two current desktop targets). Linux secret-service /
# Android keystore are added with those targets (M6+). Backends are target-gated
# inside the crate, so enabling both native features is safe per platform.
# v4 for the Android Keystore backend (android-native-keyring-store, target-gated,
# auto-registered on Android) — required to cross-compile for Android (M6, REQ-SEC-1
# parity); v3 has no Android backend. v4's default `v1` feature bundles the desktop
# stores (Windows Credential Manager / Apple Keychain / Linux Secret Service), so the
# old apple-native/windows-native feature flags are dropped. The secure_* command
# surface + the Entry::new/get/set/delete API are unchanged.
keyring = "4"

# single-instance is desktop-only; on mobile there is no second process to forward.
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
